--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
     "laravel-elixir-webpack-official": "^1.0.10",
-    "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
   },
   "dependencies": {
     "laravel-elixir": "^6.0.0-15",
-    "laravel-elixir-vue": "^0.1.8"
+    "laravel-elixir-vue-2": "^0.3.0",
+    "laravel-mix": "^1.4.2",
+    "vue-resource": "^1.3.4"
   }
 }
