--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "laravel-elixir": "^6.0.0-15",
     "laravel-elixir-vue-2": "^0.3.0",
     "laravel-mix": "^1.4.2",
+    "video.js": "^6.2.4",
     "vue-resource": "^1.3.4"
   }
 }
